load("@rules_cc//cc:defs.bzl", "cc_library")
load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

# use libstarlark to parse and update BUILD.bazel file

cc_binary(
    name  = "update",
    srcs  = [
        "update.c",
        "update.h",
    ],
    defines = ["DEBUG", "DEBUG_TRACE"],
    copts = [
        "-std=c11",
        "-pedantic-errors",
        "-I", "$(GENDIR)/update", # update.h
        "-I", "$(GENDIR)/external/libstarlark/src", # starlark.h
        "-I", "external/uthash/include",
    ],
    deps = [
        "@libstarlark//src:starlark",
        "@liblogc//lib:logc",
    ],
    linkstatic = 1
)

########
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = ["update.c"],
    additional_srcs = select({
        "@obazl_cc//profile:dev?": [
            "@liblogc//macros:ansi_colors.h",
            "@liblogc//macros:logging_debug.h"
        ],
        "//conditions:default": [
            "@liblogc//macros:logging_ndebug.h"
        ]
    }),
    visibility = ["//visibility:public"]
)
