load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag", "string_flag")

load("@makeheaders//src:RULES.bzl", "makeheaders")
load("@lemon//src:BUILD.bzl", "lemon")

load("//config/cc:CONFIG.bzl",
     COPTS = "BASE_COPTS",
     DEFINES = "BASE_DEFINES")

exports_files(["emit_build_bazel.c"])

TOOLCHAINS = ["//:repo_paths"]

###########
cc_library(
    name = "bazel",
    srcs = [
        "emit_build_bazel.c",
        # "bazel_map_reduce.c",
        # "opam_pkg_handler.c",
        # "mkdir_r.c",
        ":mkhdrs",
    ],
    deps = [
        "@findlibc//src:findlibc",
        "@liblogc//src:logc",
        "@semverc//src:semverc",
        "@uthash//src:uthash",
        "//src/utils"
        # "//src:opamc"
    ],
    copts = COPTS + [
        "-I$(GENDIR)/$(@findlibc)/src",
        "-I$(@liblogc)/src",
        "-I$(@semverc)/src",
        "-I$(@uthash)/src",
        "-I$(GENDIR)/$(@)/new/bazel",
    ],
    local_defines = DEFINES,
    # data  = [
    #     "//coswitch/templates:ocaml_bigarray.BUILD",
    #     "//coswitch/templates:ocaml_c_api.BUILD",
    #     "//coswitch/templates:ocaml_compiler-libs.BUILD",
    #     "//coswitch/templates/compiler_libs:bytecomp.BUILD",
    #     "//coswitch/templates/compiler_libs:common.BUILD",
    #     "//coswitch/templates/compiler_libs:optcomp.BUILD",
    #     "//coswitch/templates/compiler_libs:toplevel.BUILD",
    #     "//coswitch/templates/compiler_libs:native_toplevel.BUILD",
    #     "//coswitch/templates:ocaml_dynlink.BUILD",
    #     "//coswitch/templates:ocaml_num.BUILD",
    #     "//coswitch/templates:ocaml_ocamldoc.BUILD",
    #     "//coswitch/templates:ocaml_runtime.BUILD",
    #     "//coswitch/templates:ocaml_stdlib.BUILD",
    #     "//coswitch/templates:ocaml_str.BUILD",

    #     "//coswitch/templates/platforms:BUILD.bazel",
    #     "//coswitch/templates/platforms/build:BUILD.bazel",
    #     "//coswitch/templates/platforms/target:BUILD.bazel",

    #     "//coswitch/templates:toolchain/adapters/local.BUILD",
    #     "//coswitch/templates:toolchain/adapters/local.BUILD.mustache",
    #     "//coswitch/templates:toolchain/adapters/linux/x86_64.BUILD",
    #     "//coswitch/templates:toolchain/adapters/linux/arm.BUILD",
    #     "//coswitch/templates:toolchain/adapters/macos/x86_64.BUILD",
    #     "//coswitch/templates:toolchain/adapters/macos/arm.BUILD",
    #     "//coswitch/templates:toolchain/profiles/profiles.BUILD",
    #     "//coswitch/templates:toolchain/selectors/local.BUILD",
    #     "//coswitch/templates:toolchain/selectors/linux/x86_64.BUILD",
    #     "//coswitch/templates:toolchain/selectors/linux/arm.BUILD",
    #     "//coswitch/templates:toolchain/selectors/macos/arm.BUILD",
    #     "//coswitch/templates:toolchain/selectors/macos/x86_64.BUILD",
    #     # "//coswitch/templates/host/bazel:BUILD.bazel",
    #     # "//coswitch/templates/host/build:BUILD.bazel",
    #     # "//coswitch/templates/host/target:BUILD.bazel",
    #     "//coswitch/templates:ocaml_threads.BUILD",
    #     "//coswitch/templates:ocaml_unix.BUILD",
    # ],
    # ] + select({
    #     "//compilation_mode:dbg?": ["//src:debug"],
    #     "//conditions:default": []
    # }),
    toolchains = TOOLCHAINS,
    visibility = ["//visibility:public"]
)

makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "emit_build_bazel.c",
        # "bazel_map_reduce.c",
        # "opam_pkg_handler.c",
        # "mkdir_r.c"
    ],
    additional_srcs = [
        "//src/utils:utils.c"
    ],
    visibility = ["//visibility:public"]
)
