load("//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_LOCAL_DEFINES",
     "BASE_LINKOPTS")

load("@makeheaders//src:RULES.bzl", "makeheaders")

TOOLCHAINS = ["//:module_profiles"]

exports_files(["new_bazel.c"])

#########################
cc_binary(name = "module", deps= ["//lib/obazl"])

cc_binary(name = "pkg",    deps = ["//lib/obazl"])

##########
cc_library(
    name  = "new_bazel",
    linkstatic = True,
    alwayslink = True,
    srcs  = [
        "new_bazel.c",
        ":mkhdrs"
    ],
    deps = [
        "//man:manpager",
        "@liblogc//lib:logc",
        "@obazl_tools_cc//src/utils:obazl_utils",
        "@runfiles//src:runfiles",
        "@uthash//src:uthash",
        "@xdgc//lib:xdgc"
    ],
    copts = BASE_COPTS + [
        "-I$(GENDIR)/$(@)/new/bazel",
        "-I$(GENDIR)/$(@)/man",
        # "-I$(@liblogc)/src",
        "-I$(GENDIR)/$(@obazl_tools_cc)/src/utils",
        "-I$(GENDIR)/$(@runfiles)/src",
        "-I$(@uthash)/src",
        "-I$(GENDIR)/$(@xdgc)/lib"
    ],
    linkopts = BASE_LINKOPTS,
    local_defines = BASE_LOCAL_DEFINES,
    toolchains = TOOLCHAINS,
    visibility = ["//visibility:public"]
)

########
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "new_bazel.c",
    ],
    additional_srcs = [
        "//man:manpager.c",
        "//lib/obazl:obazl.c",
        "@obazl_tools_cc//src:ansi_colors.h"
    ],
)
