load("//cfg/cc:CONFIG.bzl",
     COPTS   = "BASE_COPTS",
     DEFINES = "BASE_DEFINES")

load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

exports_files(["utils.c"])

##########
cc_library(
    name  = "utils",
    visibility = ["//visibility:public"],
    srcs  = [
        "utils.c",
        ":mkhdrs",
        # "//src/hdrs:coswitch.h",
    ],
    includes = ["."],
    deps = [
        "@liblogc//lib:logc",
        "@uthash//lib:uthash"
   ],
    copts = COPTS + [
        "-I$(GENDIR)/src/utils"
    ],
    local_defines = DEFINES,
    linkstatic = 1,
)

################
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = ["utils.c"],
    additional_srcs = [
        "@liblogc//macros:ansi_colors.h"
    ] + select({
        "@obazl_cc//profile:dev?": [
            "@liblogc//macros:logging_debug.h"
        ],
        "//conditions:default": [
            "@liblogc//macros:logging_ndebug.h"
        ]
    }),
)

